plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.10'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

compileJava {
	options.compilerArgs << '-Xlint'
}

group = 'com.disk91'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

bootJar {
	launchScript()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.10.2'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.13'
	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'

	implementation group: 'com.amazonaws', name:'aws-java-sdk', version: '1.12.429'
	implementation group: 'io.grpc', name: 'grpc-okhttp', version: '1.53.0'
	implementation group: 'io.grpc', name: 'grpc-netty', version:'1.53.0'
	implementation group: 'io.grpc', name: 'grpc-protobuf', version:'1.53.0'
	implementation group: 'io.grpc', name: 'grpc-stub', version:'1.53.0'
	implementation group: 'com.uber', name: 'h3', version:'4.1.1'


	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
